fdo#65055: sfx: fix automatic version on close

The parameter "FailOnWarning" is passed around better now, so it arrives
in SfxBaseModel::storeSelf() which considers it illegal.

(regression from e2799d253b1dc62967693aa5bccd7360a9520967)

Change-Id: I2a51a2ecc24e6de506e1840bd28cbe157a8ad6a5
(cherry picked from commit 969bc572441ef8fd43cd7d350a533ffd715b74d3)
Reviewed-on: https://gerrit.libreoffice.org/4774
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>